tests/ui/feature-gates/feature-gate-doc-link-canonical.rs
#![doc(html_link_canonical = "http://example.com/")]
//~^ ERROR `#[doc(html_link_canonical)]` is experimental

fn main() {}
